<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.widget.Button
        android:id="@+id/btnReturn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_rect4"
        android:contentDescription="@string/to_previous_page" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="170dp"
        android:gravity="center"
        android:elevation="1dp"
        android:fontFamily="@font/bryndanwritebook"
        android:text="@string/Memo"
        android:textColor="@color/darkbrown"
        android:textSize="40sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/memolist"
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:background="@drawable/rounded_rect2"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="30dp"
        android:hint="@string/enter_your_text_here"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="600sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <android.widget.Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rect3"
            android:fontFamily="@font/bryndanwritebook"
            android:text="@string/Delete"
            android:textAllCaps="false"
            android:textColor="@color/darkbrown"
            android:textSize="25sp"
            android:textStyle="bold" />

        <android.widget.Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:background="@drawable/rounded_rect3"
            android:fontFamily="@font/bryndanwritebook"
            android:text="@string/Edit"
            android:textAllCaps="false"
            android:textColor="@color/darkbrown"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>


</FrameLayout>