<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/memo_interface"
    android:layout_width="250dp"
    android:layout_height="350dp"
    android:layout_marginStart="50dp"
    android:layout_marginTop="150dp"
    android:background="@drawable/rounded_rect2"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="@font/bryndanwritebook"
        android:textSize="65sp"
        android:textColor="@color/brown"
        android:text="@string/Memo"/>

    <android.widget.Button
        android:id="@+id/btnNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:paddingVertical="8sp"
        android:background="@drawable/rounded_rect1"
        android:fontFamily="@font/bryndanwritebook"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAllCaps="false"
        android:text="@string/New" />

    <android.widget.Button
        android:id="@+id/btnView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:paddingVertical="8sp"
        android:background="@drawable/rounded_rect3"
        android:fontFamily="@font/bryndanwritebook"
        android:textColor="@color/lightbrown"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:text="@string/View" />

    <android.widget.Button
        android:id="@+id/btnBack"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_rect3"
        android:fontFamily="@font/bryndanwritebook"
        android:textColor="@color/darkbrown"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:text="@string/Back" />
</LinearLayout>